[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/Minigame/WorkMinigame/rejected_folder.png" type="Texture" id=1]
[ext_resource path="res://scenes/Minigame/WorkMinigame/WorkMinigame.gd" type="Script" id=2]
[ext_resource path="res://scenes/Minigame/WorkMinigame/approved_folder.png" type="Texture" id=3]
[ext_resource path="res://scenes/Minigame/WorkMinigame/ShakeCamera.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 120, 300 )

[node name="WorkMinigame" type="Node2D"]
script = ExtResource( 2 )
difficulty = 4

[node name="Camera2D" type="Camera2D" parent="."]
current = true
script = ExtResource( 4 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Documents" type="Node2D" parent="."]

[node name="ApprovedArea" type="Area2D" parent="."]
position = Vector2( -392, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="ApprovedArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="ApprovedArea"]
texture = ExtResource( 3 )

[node name="RejectedArea" type="Area2D" parent="."]
position = Vector2( 392, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="RejectedArea"]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="RejectedArea"]
texture = ExtResource( 1 )

[node name="PenaltyTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="area_entered" from="ApprovedArea" to="." method="_on_ApprovedArea_area_entered"]
[connection signal="area_entered" from="RejectedArea" to="." method="_on_RejectedArea_area_entered"]
[connection signal="timeout" from="PenaltyTimer" to="." method="_on_PenaltyTimer_timeout"]
